[package]
name = "celly"
description = "Cellular automaton library."
repository = "https://github.com/0nkery/celly"
license = "MIT"
version = "0.4.5"
authors = ["Dmitry Shlagoff <wessmoke@gmail.com>"]

[dependencies]
serde = "0.7"
serde_macros = { git = "https://github.com/serde-rs/serde" }

[dev-dependencies.bincode]
version = "0.5"
features = ["serde"]
