[package]
name = "celly"
description = "Cellular automaton library."
repository = "https://github.com/0nkery/celly"
license = "MIT"
version = "0.5.0"
authors = ["Dmitry Shlagoff <wessmoke@gmail.com>"]

[dependencies]
serde = "0.7"
serde_macros = "0.7"

[dev-dependencies.bincode]
version = "0.5"
features = ["serde"]
