[package]
name = "celly"
description = "Cellular automaton library."
repository = "https://github.com/0nkery/celly"
license = "MIT"
version = "0.6.0"
authors = ["Dmitry Shlagoff <wessmoke@gmail.com>"]

[dependencies]
serde = "0.7"
serde_macros = "0.7"
clippy = "*"
scoped_threadpool = "0.1"


[dev-dependencies.bincode]
version = "0.5"
features = ["serde"]

[dev-dependencies]
num_cpus = "1.0"
